fix: front-end router

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -39,6 +39,9 @@
                             <br />
                             <p id="manualNumbersContainer">
                             </p>
+                            <div align="right">
+                                <input type="submit" value="구매하기" />
+                            </div>
                         </form>
                     </div>
                 </section>
