--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -12,16 +12,15 @@
     <form action="/winningLotto" method="post">
         <tr>
             <th>금액:</th>
-            <td><input type="text" placeholder="Ex) 14000" name="money"/></td>
+            <td><input type="text" placeholder="14000" name="money"/></td>
         </tr>
         <tr>
             <th>수동 로또 개수:</th>
-            <td><input type="text" placeholder="Ex) 3" name="numberOfManualLotto"/></td>
+            <td><input type="text" placeholder="3" name="numberOfManualLotto"/></td>
         </tr>
         <tr>
             <th>수동 로또 번호:</th>
-            <td><textarea rows="5" cols="30" placeholder="Ex)
-8, 21, 23, 41, 42, 43
+            <td><textarea rows="5" cols="30" placeholder="8, 21, 23, 41, 42, 43
 3, 5, 11, 16, 32, 38
 7, 11, 16, 35, 36, 44"
                           name="manualLottoNumbers"></textarea></td>
