feat: LottoResultsFactory 클래스 생성

--- a/src/main/resources/static/error.html
+++ b/src/main/resources/static/error.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <form action="/reset" method="get" accept-charset="UTF-8">
-    error 입니다. 번호를 제대로 입력하세ㅛ
+    error 입니다. 번호를 제대로 입력하세요
     <input type="submit">
 </form>
 </body>
