feat : 결과 조회 화면 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,5 +33,8 @@
     </div>
     <button type="submit" class="btn btn-dark">진행</button>
 </form>
+<form action="/selectRound" method="get">
+    <button type="submit" class="btn btn-dark">결과보기</button>
+</form>
 </body>
 </html>
