--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,26 +15,32 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<form action="/lottoBuy" method="GET">
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">금액 입력</span>
+<div class="container" style="max-width: 500px; margin-top: 30px">
+    <form action="/lottoBuy" method="GET">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">금액 입력</span>
+            </div>
+            <input type="text" class="form-control" placeholder="금액을 천원 단위로 입력하세요" aria-describedby="basic-addon1"
+                   name="money">
         </div>
-        <input type="text" class="form-control" placeholder="금액을 천원 단위로 입력하세요" aria-describedby="basic-addon1"
-               name="money">
-    </div>
 
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon2">수동 갯수</span>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon2">수동 갯수</span>
+            </div>
+            <input type="text" class="form-control" placeholder="수동으로 구매할 갯수를 입력하세요" aria-describedby="basic-addon1"
+                   name="manualAmount">
         </div>
-        <input type="text" class="form-control" placeholder="수동으로 구매할 갯수를 입력하세요" aria-describedby="basic-addon1"
-               name="manualAmount">
-    </div>
-    <button type="submit" class="btn btn-dark">진행</button>
-</form>
-<form action="/selectRound" method="get">
-    <button type="submit" class="btn btn-dark">결과보기</button>
-</form>
+        <div class="text-center">
+            <button type="submit" class="btn btn-dark" style="left: 50%;">진행</button>
+        </div>
+    </form>
+    <form action="/selectRound" method="get">
+        <div class="text-center">
+            <button type="submit" class="btn btn-dark">결과보기</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
