--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,8 +23,18 @@
             <input type="text" id="user" name="user_name" class="form-control" />
             <small class="form-text text-muted">원하시는 사용자 이름을 입력해주세요.</small>
         </div>
-        <button type="submit" class="btn btn-primary">시작하기</button>
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">시작하기</button>
+        </div>
     </form>
+    <div class="row">
+        <div class="col-md-6">
+            A table
+        </div>
+        <div class="col-md-6">
+            B table
+        </div>
+    </div>
 </section>
 </body>
 
