--- a/src/main/resources/public/html/make_lotto.html
+++ b/src/main/resources/public/html/make_lotto.html
@@ -117,7 +117,7 @@
             <button id="result-btn" type="button" onclick="clickShowResult()" disabled="true">결과 확인하기</button>
         </div>
         <div id="result-area" style="display:none">
-            <p>-----당첨 결과-----</p>
+            <p>-----제 <span id="turn_text"> </span>회 로또 당첨 결과-----</p>
             <div id="rank-area">
                 <p>6개 일치 (2000000000)- <span id="rank_1"> </span>개</p>
                 <p>5개 일치, 보너스 볼 일치(30000000원)- <span id="rank_2"> </span>개</p>
