refactor: 피드백 반영, 경로에 소문자만 사용

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container" style="max-width: 500px; margin-top: 30px">
-    <form action="/lottoBuy" method="GET">
+    <form action="/buy/lotto" method="GET">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="basic-addon1">금액 입력</span>
@@ -36,7 +36,7 @@
             <button type="submit" class="btn btn-dark" style="left: 50%;">진행</button>
         </div>
     </form>
-    <form action="/selectRound" method="get">
+    <form action="/select/round" method="get">
         <div class="text-center">
             <button type="submit" class="btn btn-dark">결과보기</button>
         </div>
