refactor: 경로, html 이름 변경

--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -9,7 +9,7 @@
 
 <table>
     <tbody>
-    <form action="/winningLotto" method="post">
+    <form action="/winninglotto" method="post">
         <tr>
             <th>금액:</th>
             <td><input type="text" placeholder="14000" name="money"/></td>
