로또 4단계 진행중 - API 응답 완성

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -31,7 +31,7 @@
           id="manualPurchaseCount"
           min="0"
           value="0"
-          onchange="manualLottoAmount(value)"
+          onchange="manualLottoCount(value)"
         />
         <label for="manualPurchaseCount">개</label>
       </div>
