--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로또</title>
+    <style>
+      input[type="number"] {
+        width: 3em;
+      }
+    </style>
   </head>
   <body>
     <h1>로또</h1>
@@ -18,6 +23,7 @@
           value="0"
           step="1000"
           onchange="changePurchaseAmount(value)"
+          style="width: 5em;"
         />
         <label for="purchaseAmount">원</label>
       </div>
@@ -62,16 +68,7 @@
       </div>
     </div>
     <hr />
-    <div id="winningStat" style="display: none;">
-      <p>당첨 통계</p>
-      <ul>
-        <li>3개 일치 (5000원) - 0개</li>
-        <li>4개 일치 (50000원) - 0개</li>
-        <li>5개 일치 (1500000원) - 0개</li>
-        <li>5개 일치, 보너스 볼 일치 (30000000원) - 0개</li>
-        <li>6개 일치 (2000000000원) - 0개</li>
-      </ul>
-      <p>총 수익률은 0%입니다.</p>
+    <div id="winningStat">
     </div>
     <hr />
     <script defer type="text/javascript" src="js/jquery-3.4.1.js"></script>
