[Add] implement ResultDTO

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>로또</h1>
     <button onclick="location.href='payment.html'" type="button">구매하기</button>
-    <button onclick="location.href='round-result.html'" type="button">회차별 결과보기</button>
+    <form action="/round-result" method="post">
+        <input type="submit" value="회차별 결과보기">
+    </form>
 </body>
 </html>
