로또 5단계 중간저장

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -71,6 +71,8 @@
     <div id="winningStat">
     </div>
     <hr />
+    <div id="previousResults">
+    </div>
     <script defer type="text/javascript" src="js/jquery-3.4.1.js"></script>
     <script defer type="text/javascript" src="js/script.js"></script>
   </body>
